[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/screens/login/Login.gd" type="Script" id=1]
[ext_resource path="res://src/screens/login/Logo.png" type="Texture" id=2]
[ext_resource path="res://src/screens/login/Overlay.png" type="Texture" id=3]
[ext_resource path="res://src/screens/login/EXAMPLE.png" type="Texture" id=4]
[ext_resource path="res://src/screens/login/Login.png" type="Texture" id=5]
[ext_resource path="res://src/screens/login/screen.png" type="Texture" id=6]
[ext_resource path="res://src/screens/login/Create.png" type="Texture" id=7]
[ext_resource path="res://src/screens/login/Buttons.gd" type="Script" id=8]
[ext_resource path="res://src/screens/login/LoginMusic.mp3" type="AudioStream" id=9]

[node name="Node2D" type="Node2D"]

[node name="Buttons" type="Node2D" parent="."]
script = ExtResource( 8 )

[node name="Button" type="Button" parent="Buttons"]
margin_left = 1514.0
margin_top = 13.0
margin_right = 1595.0
margin_bottom = 101.0

[node name="Button2" type="Button" parent="Buttons"]
margin_left = 1603.0
margin_top = 15.0
margin_right = 1684.0
margin_bottom = 103.0

[node name="Button3" type="Button" parent="Buttons"]
margin_left = 1691.0
margin_top = 17.0
margin_right = 1766.0
margin_bottom = 101.0

[node name="Button4" type="Button" parent="Buttons"]
margin_left = 1772.0
margin_top = 15.0
margin_right = 1853.0
margin_bottom = 103.0

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 6 )
centered = false

[node name="EXAMPLE" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.768627 )
position = Vector2( 960, 519 )
texture = ExtResource( 4 )

[node name="Overlay" type="Sprite" parent="."]
position = Vector2( 960, 566 )
texture = ExtResource( 3 )

[node name="JackolandLogo" type="Sprite" parent="Overlay"]
position = Vector2( 18, -311 )
texture = ExtResource( 2 )

[node name="Login" type="TextureButton" parent="Overlay"]
margin_left = -178.0
margin_top = 168.0
margin_right = 169.0
margin_bottom = 317.0
rect_pivot_offset = Vector2( 173, 74 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 5 )
script = ExtResource( 1 )

[node name="Register" type="TextureButton" parent="."]
margin_left = 34.0
margin_top = 858.0
margin_right = 471.0
margin_bottom = 1055.0
rect_pivot_offset = Vector2( 218, 98 )
texture_normal = ExtResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="pressed" from="Buttons/Button" to="Buttons" method="facebook_button"]
[connection signal="pressed" from="Buttons/Button" to="Buttons" method="_on_Button_pressed"]
[connection signal="pressed" from="Buttons/Button2" to="Buttons" method="instagram_button"]
[connection signal="pressed" from="Buttons/Button3" to="Buttons" method="twitter_button"]
[connection signal="pressed" from="Buttons/Button4" to="Buttons" method="discord_button"]
[connection signal="mouse_entered" from="Overlay/Login" to="Overlay/Login" method="_on_Login_mouse_entered"]
[connection signal="mouse_exited" from="Overlay/Login" to="Overlay/Login" method="_on_Login_mouse_exited"]
[connection signal="pressed" from="Overlay/Login" to="Overlay/Login" method="_on_Login_pressed"]
