extends Node2D



func facebook_button():
	OS.shell_open("https://fb.me/PlayJackoLand")


func instagram_button():
	OS.shell_open("https://instagram.com/playjackoland?igshid=NDRkN2NkYzU=")


func twitter_button():
	OS.shell_open("https://twitter.com/PlayJackoLand?s=20&t=Y5_dh3qPD6ZsssO5Drqr2A")


func discord_button():
		OS.shell_open("https://discord.gg/Q4GazMC67q")
